WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
173076
bmalloc: memory APIs don't need to be heap data members
https://bugs.webkit.org/show_bug.cgi?id=173076
Summary
bmalloc: memory APIs don't need to be heap data members
Geoffrey Garen
Reported
2017-06-07 15:04:20 PDT
bmalloc: memory APIs don't need to be heap data members
Attachments
Patch
(7.08 KB, patch)
2017-06-07 15:06 PDT
,
Geoffrey Garen
no flags
Details
Formatted Diff
Diff
Patch
(7.09 KB, patch)
2017-06-07 15:12 PDT
,
Geoffrey Garen
no flags
Details
Formatted Diff
Diff
Patch
(7.16 KB, patch)
2017-06-07 15:20 PDT
,
Geoffrey Garen
no flags
Details
Formatted Diff
Diff
Patch
(7.02 KB, patch)
2017-06-07 15:24 PDT
,
Geoffrey Garen
no flags
Details
Formatted Diff
Diff
Patch
(7.41 KB, patch)
2017-06-07 15:35 PDT
,
Geoffrey Garen
sam
: review+
Details
Formatted Diff
Diff
Show Obsolete
(4)
View All
Add attachment
proposed patch, testcase, etc.
Geoffrey Garen
Comment 1
2017-06-07 15:06:54 PDT
Created
attachment 312237
[details]
Patch
Geoffrey Garen
Comment 2
2017-06-07 15:12:39 PDT
Created
attachment 312238
[details]
Patch
Geoffrey Garen
Comment 3
2017-06-07 15:20:11 PDT
Created
attachment 312240
[details]
Patch
Geoffrey Garen
Comment 4
2017-06-07 15:24:00 PDT
Created
attachment 312242
[details]
Patch
Geoffrey Garen
Comment 5
2017-06-07 15:35:22 PDT
Created
attachment 312244
[details]
Patch
Geoffrey Garen
Comment 6
2017-06-07 21:05:45 PDT
Committed
r217918
: <
http://trac.webkit.org/changeset/217918
>
Darin Adler
Comment 7
2017-06-09 10:06:29 PDT
Comment on
attachment 312244
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=312244&action=review
> Source/bmalloc/bmalloc/AvailableMemory.h:52 > + auto memoryUse = memoryStatus(); > + return memoryUse.memoryFootprint;
Nicer without a local variable.
> Source/bmalloc/bmalloc/AvailableMemory.h:58 > + auto memoryUse = memoryStatus(); > + return memoryUse.percentAvailableMemoryInUse;
Ditto.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug